================================================================================
 v2.0.0 (unreleased)
================================================================================
Changed: furl.__truediv__() and Path.__truediv__() now mirror
  Pathlib.__truediv__()'s behavior and return a new instance. The original
  instance is no longer modified. Old behavior: f = furl('1'); f / '2' -> str(f)
  == '1'. New behavior: f = furl('1'); f /= '2' -> str(f) == '1/2'.
Fixed: Path.load() now accepts Path instances, e.g. f.path.load(Path('hi')).
Removed: Support for Python 2.6, which reached EOL on 2013-10-29.

================================================================================
 v1.2.1
================================================================================

================================================================================
 v1.2
================================================================================
Added: Path segment appending via the division operator (__truediv__()).
Changed: Bump orderedmultidict dependency to v1.0.
Changed: Check code style with flake8 instead of pycodestyle.
Changed: Percent-encode all non-unreserved characters in Query key=value pairs,
  including valid query characters (e.g. '=', '?', etc). Old encoding:
  "?url=http://foo.com/"; new encoding: "?url=http%3A%2F%2Ffoo.com%2F". Equal
  signs remain decoded in query values where the key is empty to allow for, and
  preserve, queries like '?==3=='.

================================================================================
 v1.1
================================================================================
Fixed: Support and preserve all query strings as provided. For example, preserve
  the query '&&==' of 'http://foo.com?&&==' as-is. Empty key=value pairs are
  stored as ('', None) in Query.params, e.g. [('', None), ('', None)] for the
  query '&'.
Changed: Don't encode equal signs ('=') in query values if the key is empty.